--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Tast 1 -->
 
-    <!-- <ul>
+     <ul>
         <li>Fruit
             <ul>
                 <li>Apple</li>
@@ -27,11 +27,11 @@
             <li>Vegetables</li>
             <li>Meat</li>
         </li>
-    </ul> -->
+    </ul> 
 
     <!-- Tast 2 -->
 
-    <!-- <p>Preceding Text</p>
+    <p>Preceding Text</p>
 
     <ol type="i">
         <li>list item 1
@@ -73,12 +73,12 @@
                 </ul>
             </li>
         </li>
-    </ol> -->
+    </ol> 
 
 
     <!-- Task 3 -->
 
-    <!-- <ol>
+    <ol>
         <li>Fruit
             <ol>
                 <li>Mango</li>
@@ -98,12 +98,12 @@
 
          </li>   
         </li>
-    </ol> -->
+    </ol> 
 
 
     <!-- Task 4 -->
 
-    <!-- <li type="none">
+    <li type="none">
         Section 1:
         <ul>
             <li>Apple</li>
@@ -129,15 +129,15 @@
                 </ul>
             </ul>
         </li>
-    </li>   -->
+    </li>  
 
     <!-- Task 5 -->
 
-    <!-- <h1>Welcome to my GeeksforGeeks Learning</h1>
+    <h1>Welcome to my GeeksforGeeks Learning</h1>
      
     <p>List of available courses </p>
     <ul>
-           <li>HTml</li>
+           <li>HTMl</li>
            <li>CSS</li>
            <li>JavaScript</li>
            <li>Python</li>
@@ -153,7 +153,7 @@
            <li>Python</li>
            <li>Java</li>
         
-    </ol> -->
+    </ol> 
 
 </body>
 
